Issue linagora/lgs/openpaas/linagora.esn.unifiedinbox#1146: Fix an issue on mobile browser in iOS which parent component can not be clicked on

--- a/frontend/css/modules/settings-overlay.less
+++ b/frontend/css/modules/settings-overlay.less
@@ -61,18 +61,6 @@
     }
   }
 
-  &:active {
-    settings-overlay {
-      .md-menu, .md-menu.md-open {
-        .transition(0.25s ease-out);
-
-        .mdi {
-          opacity: 1;
-        }
-      }
-    }
-  }
-
   settings-overlay .md-menu {
     &.md-open {
       .mdi {
